RecruitableCharacter, info is saved.